--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
 .menu__item_search {
   padding-left: 96px;
   padding-right: 18px;
-  padding-top: 3px;
+  padding-top: 5px;
 }
 
 .menu__item_help {
@@ -185,7 +185,7 @@ body {
 
 .product__title {
   text-align: center;
-  font: 20px/21px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
+  font: 22px/21px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   margin-bottom: 20px;
 }
 
@@ -617,6 +617,10 @@ footer {
     padding-left: 55px;
   }
 
+  .tree-box__button {
+    margin-left: 290px;
+  }
+
 }
 
 @media (max-width: 1080px) {
@@ -626,6 +630,17 @@ footer {
 
   .menu__item_search {
     padding-left: 35px;
+  }
+
+  .tree-box__button {
+    margin-left: 285px;
+  }
+
+}
+
+@media (max-width: 1060px) {
+.tree-box__button {
+    margin-left: 280px;
   }
 
 }
@@ -916,6 +931,10 @@ footer {
     padding-left: 30px;
   }
 
+  .tree-box__button {
+    margin-left: 260px;
+  }
+
 }
 
 @media (max-width: 930px) {
@@ -925,6 +944,10 @@ footer {
 
   .menu__item_search {
     padding-left: 10px;
+  }
+
+  .tree-box__button {
+    margin-left: 250px;
   }
 
 }
@@ -946,6 +969,14 @@ footer {
     padding-left: 20px;
   }
 
+  .tree-box__button {
+    margin-left: 245px;
+  }
+
+  .tree-text__subtitle {
+    font: 12px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  }
+
 }
 
 @media (max-width: 850px) {
@@ -955,6 +986,33 @@ footer {
 
   .menu__item_search {
     padding-left: 5px;
+  }
+
+  .tree-box {
+    width: 510px;
+    height: 310px;
+  }
+
+  .tree-box__button {
+    margin-left: 225px;
+    width: 42px;
+    height: 42px;
+  }
+
+  .tree-text {
+    height: 250px;
+  }
+
+  .tree-text__button {
+    font: 11px/11.5px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
+  }
+
+  .tree-text__subtitle {
+    font: 11px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  }
+
+  .tree-text__title {
+    font: 21px/27px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   }
 
 }
@@ -1042,6 +1100,26 @@ footer {
     margin-top: 42px;
     margin-left: 8px;
   }
+
+  .menu__item {
+    font: 20px/29px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
+  }
+
+  .menu__item {
+    padding: 10px 10px;
+  }
+
+  .tree-box__button {
+    margin-left: 210px;
+  }
+
+  .product-card__img-4,
+  .product-card__name_4,
+  .wrapper__choice_4,
+  .product-assortment__vl {
+    display: none;
+  }
+
 }
 
 @media (max-width: 768px) {
@@ -1199,8 +1277,8 @@ footer {
   }
 
   .tree-box {
-    width: 695px;
-    height: 470px;
+    width: 698px;
+    height: 610px;
     margin-left: 3px;
     margin-bottom: 90px;
   }
@@ -1211,8 +1289,6 @@ footer {
     width: 51px;
     height: 51px;
   }
-
-
 
 }
 
@@ -1230,12 +1306,13 @@ footer {
   }
 
   .menu {
-    width: 60%;
-    height: 30%;
+    width: 100%;
+    height: 50%;
   }
 
   .menu__item {
-    font: 20px/11px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
+    font: 17px/11px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
+    padding: 12px 10px;
   }
 
   .menu__btn {
@@ -1368,7 +1445,7 @@ footer {
 
   .tree-box {
     width: 283px;
-    height: 167px;
+    height: 220px;
     margin-bottom: 45px;
   }
 
@@ -1435,6 +1512,7 @@ footer {
 
   .tree-text__subtitle {
     padding: 0 5px;
+    margin: 0;
   }
 
 }
