--- a/styles.css
+++ b/styles.css
@@ -492,22 +492,31 @@ footer {
 
 .footer-wrapper {
   display: flex;
-  width: 72%;
+  width: 82%;
   margin: auto;
   margin-bottom: 52px;
   padding-top: 55px;
+  border: dashed 1px red;
 }
 
 .footer-account {
-  margin: 0 115px 0 35px;
+  padding: 0 57px 0 36px;
+  border: dashed 1px blue;
 }
 
 .footer-service {
-  margin-right: 72px;
+  padding: 0 36px 0 56px;
+  border: dashed 1px blue;
 }
 
 .footer-miscel {
-  margin-right: 87px;
+  padding: 0 44px 0 34px;
+  border: dashed 1px blue;
+}
+
+.footer-sing {
+  padding: 0 30px 0 39px;
+  border: dashed 1px blue;
 }
 
 .footer-account__title,
@@ -516,7 +525,7 @@ footer {
 .footer-sing__title {
   font: 12px/12px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   color: #fff;
-  margin-bottom: 7px;
+  margin-bottom: 5px;
 }
 
 .footer-sing__subtitle {
@@ -547,7 +556,7 @@ footer {
   color: #fff;
   background: #000;
   border-color: #fff;
-  padding: 11px 45px 8px 44px;
+  padding: 11px 47px 7px 44px;
   margin-bottom: 33px;
 }
 
@@ -939,16 +948,17 @@ footer {
   }
 
   .footer-wrapper {
-    width: 82%;
-    padding-top: 57px;
+    width: 95%;
+    padding-top: 55px;
   }
 
-  .footer-miscel {
-    margin-right: 85px;
+  .footer-account {
+    padding: 0 57px 0 56px;
   }
 
   .footer-sing__button {
     padding: 10px 46px 7px 44px;
+    margin-bottom: 35px;
   }
 
   .social-icons__item {
@@ -1515,8 +1525,8 @@ footer {
  }
 
  .footer-wrapper {
-    padding-top: 47px;
-    margin-bottom: 77px;
+    padding-top: 45px;
+    margin-bottom: 74px;
     width: 100%;
   }
 
@@ -1536,27 +1546,33 @@ footer {
  }
 
  .footer-account {
-    margin: 0 55px 0 49px;
+   padding: 0 27px 0 49px;
+
   }
 
   .footer-service {
-    margin-right: 65px;
+    padding: 0 31px 0 27px;
+
   }
 
   .footer-miscel {
-    margin-right: 25px;
+    padding: 0 40px 0 32px;
+
+  }
+
+  .footer-sing {
+    margin-left: 30px;
+    padding-left: 0;
   }
 
   .footer-sing__subtitle {
     word-spacing: 6px;
-    white-space: pre-wrap;
+    word-break: normal;
   }
 
   .footer__niz {
     padding-right: 0;
   }
-
-
 
 }
 
