--- a/styles.css
+++ b/styles.css
@@ -534,7 +534,7 @@ footer {
 .menu-account,
 .menu-service,
 .menu-miscel {
-  padding-left: 0px;
+  padding-left: 0;
   margin-top: 7px;
 }
 
@@ -1576,7 +1576,7 @@ footer {
   }
 
   .footer__niz {
-    padding-right: 0px;
+    padding-right: 0;
   }
 
 }
@@ -1760,7 +1760,7 @@ footer {
 
   .stories__img-1 {
     width: 279px;
-    height: 148px
+    height: 148px;
   }
 
   .stories__title {
